[workspace]

members = [
    "common/canonical_serialization",
    "common/crash_handler",
    "common/failure_ext",
    "common/logger",
    "common/metrics",
    "common/proptest_helpers",
    "common/proto_conv",
    #"config",
    "crypto/legacy_crypto",
    "crypto/nextgen_crypto",
    "types",
]
